--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,9 +1,9 @@
 name: Deploy
 
 on:
-    workflow_dispatch:
-      branches:
-        - master
+  push:
+    branches:
+      - master
 
 jobs:
   deploy:
