--- a/.github/workflows/stop-backend.yml
+++ b/.github/workflows/stop-backend.yml
@@ -1,7 +1,7 @@
 name: Deploy
 
 on:
-  push:
+  workflow_dispatch:
     branches:
       - master
 
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: SSH and deploy
+      - name: SSH and kill
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run:
@@ -21,4 +21,4 @@ jobs:
           chmod 600 keyfile
           mkdir -p ~/.ssh
           cp known_hosts ~/.ssh/known_hosts
-          ssh -t -i keyfile ubuntu@ec2-16-171-78-20.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
+          ssh -t -i keyfile ubuntu@ec2-16-171-78-20.eu-north-1.compute.amazonaws.com "sudo bash ~/kill.sh"
