--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -9,8 +9,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Add host key to known_hosts
-        run: ssh-keyscan ec2-16-171-78-20.eu-north-1.compute.amazonaws.com >> $HOME/.ssh/known_hosts
       - name: SSH and deploy
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -19,4 +17,4 @@ jobs:
           chmod 600 keyfile
           mkdir -p ~/.ssh
           cp known_hosts ~/.ssh/known_hosts
-          ssh -t -i keyfile ubuntu@ec2-16-171-78-20.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
+          ssh -t -o StrictHostKeyChecking=no -i keyfile ubuntu@ec2-16-171-78-20.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
