--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/nodemailer": "^6.4.9",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -23,8 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^126.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "nodemailer": "^6.9.4",
     "zod": "^3.21.4"
   }
 }
